# open-data-product-berlin-points-of-interest-source-aligned

./: .gitignore  README.md  data-product-manifest.yml  data-product.yml  data-transformation-03-gold-geo.yml  data-transformation-03-gold.yml  dpds.yml  main.ipynb  main.py  odps.yml  pyproject.toml
.github/workflows/: crawl-content.yaml
data/berlin-lor-points-of-interest-2024-01/: berlin-lor-points-of-interest-art-galleries-2024-01-details.csv  berlin-lor-points-of-interest-bars-2024-01-details.csv  berlin-lor-points-of-interest-bicycle-rentals-2024-01-details.csv  berlin-lor-points-of-interest-bus-stops-2024-01-details.csv  berlin-lor-points-of-interest-cafes-2024-01-details.csv  berlin-lor-points-of-interest-car-sharing-stations-2024-01-details.csv  berlin-lor-points-of-interest-childcare-2024-01-details.csv  berlin-lor-points-of-interest-cinemas-2024-01-details.csv  berlin-lor-points-of-interest-clinics-2024-01-details.csv  berlin-lor-points-of-interest-community-centers-2024-01-details.csv  berlin-lor-points-of-interest-doctors-2024-01-details.csv  berlin-lor-points-of-interest-fast-food-restaurants-2024-01-details.csv  berlin-lor-points-of-interest-fire-stations-2024-01-details.csv  berlin-lor-points-of-interest-fitness-centers-2024-01-details.csv  berlin-lor-points-of-interest-food-courts-2024-01-details.csv  berlin-lor-points-of-interest-ice-cream-parlours-2024-01-details.csv  berlin-lor-points-of-interest-marketplaces-2024-01-details.csv  berlin-lor-points-of-interest-museums-2024-01-details.csv  (+7 more)
docs/: data-product-canvas.md  dpds-canvas.md  odps-canvas.md
(+3390 files in other folders)
