[project]
name = "open-data-product-berlin-points-of-interest-source-aligned"
version = "0.1.0"
description = "Source-aligned data product providing Berlin points-of-interest data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "open-data-product-python-lib",
    "retry>=0.9.2",
]

[tool.uv.sources]
open-data-product-python-lib = { git = "https://github.com/open-data-product/open-data-product-python-lib.git", rev = "main" }
